--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/ssr": "^0.1.0",
+    "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-table": "^8.13.2",
     "class-variance-authority": "^0.7.0",
@@ -47,7 +47,7 @@
     "date-fns": "^3.3.1",
     "file-saver": "^2.0.5",
     "lucide-react": "^0.540.0",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
